# signalview

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.github/workflows/: backtest.yml  publish.yml
examples/: quickstart.py
examples/signals/: README.md  bollinger-reversion.json  donchian-breakout.json  rsi-mean-reversion.json  trend-follow-ema.json  vol-scaled-momentum.json
perpsignal/: __init__.py  backtest.py  config.py  data.py  dsl.py  factors.py  mtf.py  optimize.py  regimes.py  report.py  signal.py  signal_def.py  upstash_cache.py
scripts/: backtest_signals.py
tests/: test_backtest.py  test_dsl.py  test_examples.py  test_mtf_cache.py
